[package]
name = "koth"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "King of the hill game service"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
clap = { version = "4", features = ["cargo"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"
serde_derive = "1"
serde_yaml = "^0.9.0"
anyhow = "1"
console = "^0.15.0"
exitcode = "^1.1.2"
tracing = "^0.1.34"
tracing-tree = { version = "0.3.0" }
tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }

[features]
default = ["cli"]
# list optionals here:
cli = ["clap"]

required-features = ["cli"]
